@@ -1,3 +1,5 @@
+/* global wc_stripe_payment_request_settings_params */
+
 import { ADMIN_URL, getSetting } from '@woocommerce/settings';
 import { __ } from '@wordpress/i18n';
 import React, { useMemo } from 'react';
@@ -11,6 +13,7 @@ import interpolateComponents from 'interpolate-components';
 import { Elements } from '@stripe/react-stripe-js';
 import { loadStripe } from '@stripe/stripe-js';
 import PaymentRequestButtonPreview from './payment-request-button-preview';
+import ExpressCheckoutPreviewComponent from './express-checkout-button-preview';
 import {
 	usePaymentRequestEnabledSettings,
 	usePaymentRequestLocations,
@@ -130,6 +133,8 @@ const PaymentRequestsSettingsSection = () => {
 	const accountId = useAccount().data?.account?.id;
 	const [ publishableKey ] = useAccountKeysPublishableKey();
 	const [ testPublishableKey ] = useAccountKeysTestPublishableKey();
+	const isECEEnabled =
+		wc_stripe_payment_request_settings_params.is_ece_enabled; // eslint-disable-line camelcase
 
 	const stripePromise = useMemo( () => {
 		return loadStripe(
@@ -260,9 +265,18 @@ const PaymentRequestsSettingsSection = () => {
 				/>
 				<p>{ __( 'Preview', 'woocommerce-gateway-stripe' ) }</p>
 				<LoadableAccountSection numLines={ 7 }>
-					<Elements stripe={ stripePromise }>
-						<PaymentRequestButtonPreview />
-					</Elements>
+					{ isECEEnabled ? (
+						<ExpressCheckoutPreviewComponent
+							stripe={ stripePromise }
+							buttonType={ buttonType }
+							theme={ theme }
+							size={ size }
+						/>
+					) : (
+						<Elements stripe={ stripePromise }>
+							<PaymentRequestButtonPreview />
+						</Elements>
+					) }
 				</LoadableAccountSection>
 			</CardBody>
 		</Card>
